--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -1,5 +1,5 @@
 [smartwork]
-header = ['事件','故障','PM','告警','变更','变更评审','主动运维','FAQ','负向事件']
+header = ["事件","故障","PM","告警","变更","变更评审","主动运维","FAQ","负向事件"]
 base_folder = D:\\workspace
 report_folder = D:\workspace\交付件
 event = 【事件】
