新增同时导出交付件功能 V1.1.0

--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -1,5 +1,6 @@
 [smartwork]
 header = ["事件","故障","PM","告警","变更","变更评审","主动运维","FAQ","负向事件"]
+info_header = ["工作内容","类型","日期","耗时(h)","描述"]
 base_folder = D:\\workspace
 report_folder = D:\workspace\交付件
 event = 【事件】
