--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -1,8 +1,12 @@
 [smartwork]
 header = ["事件","故障","PM","告警","变更","变更评审","主动运维","FAQ","负向事件"]
-info_header = ["工作内容","类型","日期","耗时(h)","描述"]
+info_header = ["外部单号","业务系统","应用模块","问题发现时间","问题处理时长","状态","问题分类","问题描述","根因分析","国家","责任人","备注","问题大类"]
+
+; info_header = ["工作内容","类型","日期","耗时(h)","描述"]
 base_folder = D:\\workspace
-report_folder = D:\workspace\交付件
+report_folder = D:\workspace\0交付件
+template_folder = D:\workspace\0templates
+template_sheet_name = indicators
 event = 【事件】
 troubleshooting = 【故障】
 pm = 【PM】
@@ -12,3 +16,11 @@ version_update_meeting = 【变更评审】
 active_operation_maintain = 【主动运维】
 faq = 【FAQ】
 negative_event = 【负向事件】
+
+[issue-types]
+SU = 供应商
+CONS = 咨询类
+CONF = 配置类
+BUG = BUG类
+DATA = 数据类
+OP = 操作类
