--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -1,7 +1,7 @@
 [smartwork]
 header = ["事件","故障","PM","告警","变更","变更评审","主动运维","FAQ","负向事件"]
 info_header = ["外部单号","业务系统","应用模块","问题发现时间","问题处理时长","状态","问题分类","问题描述","根因分析","国家","责任人","备注","问题大类"]
-specify_date = 202211
+specify_date = off
 ; info_header = ["工作内容","类型","日期","耗时(h)","描述"]
 base_folder = D:\\workspace
 report_folder = D:\workspace\0交付件
@@ -24,3 +24,11 @@ CONF = 配置类
 BUG = BUG类
 DATA = 数据类
 OP = 操作类
+
+[auto]
+cce = CCE微服务
+base = ["CCE微服务","其他","文档"]
+env = ["grey","prod"]
+region = ["新加坡","俄罗斯","德电"]
+module = ["forum","huawei-club"]
+m_forum = ["bridge","circle","user","content"]
