调整、简化main函数，抽离出handler，更新统计功能的项目，当前与交付件的'问题分类'保持一致，统计功能加入'总计'项，其他细节调整

--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -1,5 +1,5 @@
 [smartwork]
-header = ["事件","故障","PM","告警","变更","变更评审","主动运维","FAQ","负向事件"]
+header = ["第三方问题","非问题","系统配置问题","系统问题","业务配置问题","转需求","咨询问题","变更实施","灰度升级部署","告警、监控、巡检","案例输出","变更评审","资源管理"]
 info_header = ["外部单号","业务系统","应用模块","问题发现时间","问题处理时长","状态","问题分类","问题描述","根因分析","国家","责任人","备注","问题大类"]
 specify_date = off
 ; info_header = ["工作内容","类型","日期","耗时(h)","描述"]
@@ -7,15 +7,19 @@ base_folder = D:\\workspace
 report_folder = D:\workspace\0交付件
 template_folder = D:\workspace\0templates
 template_sheet_name = indicators
-event = 【事件】
-troubleshooting = 【故障】
-pm = 【PM】
-alarm = 【告警】
-version_update = 【变更】
+third_party = 【第三方问题】
+non_problem = 【非问题】
+system_config = 【系统配置问题】
+system = 【系统问题】
+bussiness_config = 【业务配置问题】
+transfer_to_requirement = 【转需求】
+consultation  = 【咨询问题】
+version_update = 【变更实施】
+gray_upgrade_deployment = 【灰度升级部署】
+alarm_monitoring_inspection = 【告警、监控、巡检】
+faq = 【案例输出】
 version_update_meeting = 【变更评审】
-active_operation_maintain = 【主动运维】
-faq = 【FAQ】
-negative_event = 【负向事件】
+resource_management = 【资源管理】
 
 [issue-types]
 SU = 供应商
