--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -1,10 +1,10 @@
 [smartwork]
-header = ["第三方问题","非问题","系统配置问题","系统问题","业务配置问题","转需求","咨询问题","变更实施","灰度升级部署","告警、监控、巡检","案例输出","变更评审","资源管理"]
+header = ["第三方问题","非问题","系统配置问题","系统问题","业务配置问题","转需求","业务咨询问题","变更实施","灰度升级部署","告警、监控、巡检","案例输出","变更评审","资源管理"]
 info_header = ["外部单号","业务系统","应用模块","问题发现时间","问题处理时长","状态","问题分类","问题描述","根因分析","国家","区域","责任人","备注","问题大类"]
-specify_date = off
-; 关闭 off
+specify_date = 202510
+; 关闭 off or yyyymm
 ; info_header = ["工作内容","类型","日期","耗时(h)","描述"]
-base_folder = D:\\workspace
+base_folder = D:\\worklogs\\
 report_folder = D:\workspace\0交付件
 template_folder = D:\workspace\0templates
 template_sheet_name = indicators
@@ -14,13 +14,16 @@ system_config = 【系统配置问题】
 system = 【系统问题】
 bussiness_config = 【业务配置问题】
 transfer_to_requirement = 【转需求】
-consultation  = 【咨询问题】
+consultation  = 【业务咨询问题】
+it_consulation  = 【IT数据查询】
 version_update = 【变更实施】
 gray_upgrade_deployment = 【灰度升级部署】
 alarm_monitoring_inspection = 【告警、监控、巡检】
 faq = 【案例输出】
 version_update_meeting = 【变更评审】
 resource_management = 【资源管理】
+compliant = 【合规类】
+security_issue = 【安全事件】
 
 [issue-types]
 SU = 供应商
@@ -31,9 +34,26 @@ DATA = 数据类
 OP = 操作类
 
 [auto]
-cce = CCE微服务
-base = ["CCE微服务","其他","文档"]
+cce = 配置文件
+base = ["其他","文档"]
 env = ["grey","prod"]
-region = ["新加坡","俄罗斯","德电"]
-module = ["forum","huawei-club"]
-m_forum = ["bridge","circle","user","content"]
+region = ["ru","de"]
+ms = ["vmall","[csg]commonservice","[2c]uum","[2c]msgr"]
+
+
+
+; 问题分类|问题大类|状态|业务系统|应用模块|"注：本页为模板页，只会初始化一次，修改后不会被新的生成文件覆盖。||||"
+; 第三方问题|供应商|Open|CBG 零售|IRETAIL|
+; 非问题|咨询类|Closed|CBG 零售|ISRP|
+; 系统配置问题|配置类|Pending|CBG 零售|智慧助手|
+; 系统问题|BUG类||CBG Myhuawei|2C接入|
+; 业务配置问题|数据类||CBG Myhuawei|CBG官网|
+; 转需求|咨询类||CBG Myhuawei|MYHUAWEI APP|
+; 业务咨询问题|咨询类||CBG Myhuawei|消息中心|
+; 变更实施|操作类||CBG Myhuawei|电商|
+; 灰度升级部署|操作类||CBG Myhuawei|CCPC|
+; 告警、监控、巡检|操作类||CBG Myhuawei|CMSC|
+; 案例输出|操作类||CBG Myhuawei|CUEP|
+; 变更评审|操作类||VMALL|Vmall|
+; 资源管理|操作类||CBG 安全|CBG 安全|
+
