--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -1,59 +1,264 @@
+# =============================================================================
+# SmartWork 配置文件
+# 版本: 1.6.0
+# =============================================================================
+
 [smartwork]
+# 核心配置节 - 包含系统运行所需的基本配置
+
+# 统计表头配置 - 用于生成统计报表的表头
+# 格式: JSON数组，包含所有问题分类
 header = ["第三方问题","非问题","系统配置问题","系统问题","业务配置问题","转需求","业务咨询问题","变更实施","灰度升级部署","告警、监控、巡检","案例输出","变更评审","资源管理"]
+
+# 交付件报表表头配置 - 用于生成详细交付件报表的表头
+# 格式: JSON数组，包含报表的所有列名
 info_header = ["外部单号","业务系统","应用模块","问题发现时间","问题处理时长","状态","问题分类","问题描述","根因分析","国家","区域","责任人","备注","问题大类"]
+
+# 指定处理月份 - 控制处理哪个月份的数据
+# 格式: yyyymm (如: 202510) 或 off (使用当前月份)
 specify_date = 202510
-; 关闭 off or yyyymm
-; info_header = ["工作内容","类型","日期","耗时(h)","描述"]
+
+# 路径配置 - 系统运行所需的各种路径
+# 工作日志基础目录 - 存放工作日志文件的根目录
 base_folder = D:\\worklogs\\
+# 报告输出目录 - 生成的Excel报告存放位置
 report_folder = D:\workspace\0交付件
+# 模板目录 - Excel模板文件存放位置
 template_folder = D:\workspace\0templates
+# 模板工作表名称 - Excel模板中的工作表名称
 template_sheet_name = indicators
-third_party = 【第三方问题】
-non_problem = 【非问题】
-system_config = 【系统配置问题】
-system = 【系统问题】
-bussiness_config = 【业务配置问题】
-transfer_to_requirement = 【转需求】
-consultation  = 【业务咨询问题】
-it_consulation  = 【IT数据查询】
-version_update = 【变更实施】
-gray_upgrade_deployment = 【灰度升级部署】
-alarm_monitoring_inspection = 【告警、监控、巡检】
-faq = 【案例输出】
-version_update_meeting = 【变更评审】
-resource_management = 【资源管理】
-compliant = 【合规类】
-security_issue = 【安全事件】
 
+# 问题分类标签配置 - 用于识别工作日志中的问题分类
+# 格式: 标签名 = 【分类名称】
+# 注意: 这些标签必须与工作日志中的格式完全匹配
+third_party = 【第三方问题】                    # 第三方系统问题
+non_problem = 【非问题】                       # 非问题类工作
+system_config = 【系统配置问题】                # 系统配置相关问题
+system = 【系统问题】                          # 系统本身的问题
+bussiness_config = 【业务配置问题】             # 业务配置问题
+transfer_to_requirement = 【转需求】            # 需要转为需求的工作
+consultation  = 【业务咨询问题】                # 业务咨询类问题
+it_consulation  = 【IT数据查询】               # IT数据查询工作
+version_update = 【变更实施】                   # 版本变更实施
+gray_upgrade_deployment = 【灰度升级部署】       # 灰度升级部署
+alarm_monitoring_inspection = 【告警、监控、巡检】 # 告警监控巡检工作
+faq = 【案例输出】                            # 案例输出工作
+version_update_meeting = 【变更评审】           # 变更评审工作
+resource_management = 【资源管理】              # 资源管理工作
+compliant = 【合规类】                        # 合规类工作
+security_issue = 【安全事件】                  # 安全事件处理
+
+# 默认值配置 - 系统处理工作日志时使用的默认值
+# 默认工作时长(小时) - 当无法从日志中推断时长时使用
+default_solved_time = 2
+# 默认状态 - 工作项的默认状态
+default_solved_status = Closed
+# 默认国家代码 - 当无法从日志中识别国家时使用
+default_solved_country = DE
+# 默认责任人 - 当无法从日志中识别责任人时使用
+default_solved_owner = SA
+# 默认区域 - 工作项的默认区域
+default_region = 欧洲区
+
+# 文件处理配置 - 控制文件读取和处理的参数
+# 文件编码格式 - 用于读取和转换文件编码
+file_encoding = utf-8
+# 支持的文件类型 - 系统会处理这些类型的文件
+# 格式: JSON数组，包含所有支持的文件扩展名
+supported_file_types = [".txt"]
+# 批处理大小 - 批量处理文件时的批次大小
+batch_size = 100
+# 缓存大小 - 系统缓存的最大条目数
+cache_size = 128
+
+# Excel配置 - 控制Excel文件生成时的格式设置
+# 默认列宽 - Excel列的默认宽度
+excel_default_width = 14.67
+# 最大列宽 - Excel列的最大宽度
+excel_max_width = 22.5
+# 默认行高 - Excel行的默认高度
+excel_row_height = 16
+# 表头行高 - Excel表头行的高度
+excel_header_height = 30
+# 特殊列宽度 - 根因分析等长文本列的宽度
+excel_spec_column_width = 85
+# 前一列宽度 - 特殊列前一列的宽度
+excel_prev_column_width = 35
+
+# =============================================================================
+# 问题类型映射配置
+# 说明: 将工作日志中的问题类型代码映射为中文描述
+# =============================================================================
 [issue-types]
-SU = 供应商
-CONS = 咨询类
-CONF = 配置类
-BUG = BUG类
-DATA = 数据类
-OP = 操作类
+# 问题类型代码映射 - 用于将日志中的类型代码转换为可读的中文描述
+# 格式: 代码 = 中文描述
+SU = 供应商      # Supplier - 供应商相关问题
+CONS = 咨询类    # Consultation - 咨询类问题
+CONF = 配置类    # Configuration - 配置类问题
+BUG = BUG类      # Bug - 系统缺陷问题
+DATA = 数据类    # Data - 数据相关问题
+OP = 操作类      # Operation - 操作类问题
 
+# =============================================================================
+# 国家代码映射配置
+# 说明: 将工作日志中的国家代码映射为中文国家名称
+# =============================================================================
+[country-mapping]
+# 国家代码映射 - 用于将日志中的国家代码转换为中文国家名称
+# 格式: 代码 = 国家名称
+# 单国家代码
+BS = 新加坡      # Business Singapore - 新加坡
+SG = 新加坡      # Singapore - 新加坡
+RU = 俄罗斯      # Russia - 俄罗斯
+DE = 德国        # Germany - 德国
+ED = 德国        # Europe Germany - 德国
+
+# 多国家组合代码
+DR = 德国,俄罗斯  # Germany Russia - 德国和俄罗斯
+RD = 德国,俄罗斯  # Russia Germany - 俄罗斯和德国
+SR = 新加坡,俄罗斯 # Singapore Russia - 新加坡和俄罗斯
+RS = 俄罗斯,新加坡 # Russia Singapore - 俄罗斯和新加坡
+SD = 新加坡,德国  # Singapore Germany - 新加坡和德国
+DS = 德国,俄罗斯  # Germany Russia - 德国和俄罗斯
+SDR = 新加坡,德国,俄罗斯 # Singapore Germany Russia - 新加坡、德国和俄罗斯
+
+# =============================================================================
+# 自动生成工作目录配置
+# 说明: 控制自动生成每日工作目录时的目录结构
+# =============================================================================
 [auto]
+# 自动生成工作目录配置 - 用于 python main.py auto 命令
+# CCE配置目录名称 - 存放配置文件相关目录的名称
 cce = 配置文件
+# 基础目录列表 - 在每日工作目录下创建的基础子目录
+# 格式: JSON数组，包含所有基础目录名称
 base = ["其他","文档"]
+# 环境列表 - 不同环境的目录名称
+# 格式: JSON数组，包含所有环境名称
 env = ["grey","prod"]
+# 区域列表 - 不同区域的目录名称
+# 格式: JSON数组，包含所有区域代码
 region = ["ru","de"]
+# 微服务列表 - 不同微服务的目录名称
+# 格式: JSON数组，包含所有微服务名称
 ms = ["vmall","[csg]commonservice","[2c]uum","[2c]msgr"]
 
+# =============================================================================
+# 文件处理配置
+# 说明: 控制文件编码转换和处理的参数
+# =============================================================================
+[file-config]
+# 文件处理配置 - 控制文件编码转换和处理的参数
+# 目标编码 - 文件转换的目标编码格式
+encoding = utf-8
+# 支持的文件类型 - 需要进行编码转换的文件扩展名
+# 格式: JSON数组，包含所有支持的文件扩展名
+supported_types = [".txt"]
+
+# =============================================================================
+# 性能优化配置
+# 说明: 控制系统性能相关的参数和行为
+# =============================================================================
+[performance]
+# 性能优化配置 - 控制系统的性能表现
+# 启用缓存 - 是否启用系统缓存机制 (true/false)
+enable_caching = true
+# 缓存最大大小 - 缓存中最多保存的条目数量
+cache_max_size = 128
+# 启用进度条 - 是否显示处理进度条 (true/false)
+enable_progress_bar = true
+# 启用性能监控 - 是否启用性能监控功能 (true/false)
+enable_performance_monitoring = false
+# 批处理大小 - 批量处理数据时的批次大小
+batch_processing_size = 100
+# 内存优化 - 是否启用内存优化功能 (true/false)
+memory_optimization = true
+
+# =============================================================================
+# 日志配置
+# 说明: 控制系统日志记录的相关参数
+# =============================================================================
+[logging]
+# 日志配置 - 控制系统日志记录行为
+# 日志级别 - 记录日志的最低级别 (DEBUG/INFO/WARNING/ERROR/CRITICAL)
+log_level = INFO
+# 日志文件名 - 日志文件的名称
+log_file = smartwork.log
+# 日志格式 - 日志记录的格式模板
+log_format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
+# 日志轮转 - 是否启用日志文件轮转 (true/false)
+log_rotation = true
+# 最大日志文件大小 - 单个日志文件的最大大小
+max_log_size = 10MB
+# 备份文件数量 - 保留的日志备份文件数量
+backup_count = 5
+
+# =============================================================================
+# 正则表达式模式配置
+# 说明: 用于解析工作日志文件的正则表达式模式
+# =============================================================================
+[regex-patterns]
+# 正则表达式模式配置 - 用于解析工作日志中的各种格式
+# 工作日报文件名模式 - 匹配工作日报文件名的正则表达式
+work_report_pattern = .*工作日报(\d+).txt
+# 过滤字符串模式 - 解析工作日志条目格式的正则表达式
+# 匹配格式: 【问题分类】【国家:业务系统[应用模块]】问题描述
+filter_str_pattern = .*【([\w、]*)-?(.*)】【(\w{2,3})[:：]?([\w\s?]*)\[?(\w*)-?(\w*)\]?】(.*)
+# 注释模式 - 匹配日志中的注释行 (以**开头的行)
+comment_pattern = ^\*\*[\s]*(.*)
+# 类型组模式 - 匹配【】包围的分类标签
+type_group_pattern = 【(.*)】
+# 编号行模式 - 匹配以数字编号开头的行 (如: 1. 2. 等)
+numbered_line_pattern = \s?\d{1,2}\.
+# 清理描述模式 - 清理问题描述中的标点符号
+clean_desc_pattern = (\w*)[\.:：。\?？]?
+# 括号清理模式 - 移除文本中的【】括号及其内容
+bracket_clean_pattern = 【.*】
+
+# =============================================================================
+# 时间配置
+# 说明: 控制不同类型工作的默认时长设置
+# =============================================================================
+[time-config]
+# 时间相关配置 - 设置不同类型工作的默认时长(小时)
+# 默认工作时长 - 当无法确定具体类型时使用的默认时长
+default_work_hours = 2
+# 案例输出工作时长 - 案例输出类工作的默认时长
+case_output_hours = 3
+# SG自动化工作时长 - 新加坡自动化相关工作的时长
+base_auto_hours = 4
+# 灰度升级工作时长 - 灰度升级部署工作的时长
+gray_upgrade_hours = 1
+# IT数据查询工作时长 - IT数据查询工作的时长
+it_query_hours = 1
+# 业务咨询工作时长 - 业务咨询问题的处理时长
+business_consultation_hours = 1
+# 告警处理工作时长 - 告警监控巡检工作的时长
+alarm_hours = 1
+# 变更实施工作时长 - 变更实施工作的时长
+change_implementation_hours = 3
 
 
-; 问题分类|问题大类|状态|业务系统|应用模块|"注：本页为模板页，只会初始化一次，修改后不会被新的生成文件覆盖。||||"
-; 第三方问题|供应商|Open|CBG 零售|IRETAIL|
-; 非问题|咨询类|Closed|CBG 零售|ISRP|
-; 系统配置问题|配置类|Pending|CBG 零售|智慧助手|
-; 系统问题|BUG类||CBG Myhuawei|2C接入|
-; 业务配置问题|数据类||CBG Myhuawei|CBG官网|
-; 转需求|咨询类||CBG Myhuawei|MYHUAWEI APP|
-; 业务咨询问题|咨询类||CBG Myhuawei|消息中心|
-; 变更实施|操作类||CBG Myhuawei|电商|
-; 灰度升级部署|操作类||CBG Myhuawei|CCPC|
-; 告警、监控、巡检|操作类||CBG Myhuawei|CMSC|
-; 案例输出|操作类||CBG Myhuawei|CUEP|
-; 变更评审|操作类||VMALL|Vmall|
-; 资源管理|操作类||CBG 安全|CBG 安全|
 
+# =============================================================================
+# 配置说明和示例
+# =============================================================================
+
+# 以下是Excel模板页面的配置示例，仅供参考
+# 格式: 问题分类|问题大类|状态|业务系统|应用模块
+# 注：本页为模板页，只会初始化一次，修改后不会被新的生成文件覆盖
+
+# 问题分类配置示例:
+# 第三方问题|供应商|Open|CBG 零售|IRETAIL|
+# 非问题|咨询类|Closed|CBG 零售|ISRP|
+# 系统配置问题|配置类|Pending|CBG 零售|智慧助手|
+# 系统问题|BUG类||CBG Myhuawei|2C接入|
+# 业务配置问题|数据类||CBG Myhuawei|CBG官网|
+# 转需求|咨询类||CBG Myhuawei|MYHUAWEI APP|
+# 业务咨询问题|咨询类||CBG Myhuawei|消息中心|
+# 变更实施|操作类||CBG Myhuawei|电商|
+# 灰度升级部署|操作类||CBG Myhuawei|CCPC|
+# 告警、监控、巡检|操作类||CBG Myhuawei|CMSC|
+# 案例输出|操作类||CBG Myhuawei|CUEP|
+# 变更评审|操作类||VMALL|Vmall|
+# 资源管理|操作类||CBG 安全|CBG 安全|
