--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -225,7 +225,7 @@ bracket_clean_pattern = 【.*】
 default_work_hours = 2
 # 案例输出工作时长 - 案例输出类工作的默认时长
 case_output_hours = 3
-# SG自动化工作时长 - 新加坡自动化相关工作的时长
+# 案例输出时长 - 案例输出相关工作的时长
 base_auto_hours = 4
 # 灰度升级工作时长 - 灰度升级部署工作的时长
 gray_upgrade_hours = 1
