--- a/confs/conf.ini
+++ b/confs/conf.ini
@@ -31,22 +31,39 @@ template_sheet_name = indicators
 # 问题分类标签配置 - 用于识别工作日志中的问题分类
 # 格式: 标签名 = 【分类名称】
 # 注意: 这些标签必须与工作日志中的格式完全匹配
-third_party = 【第三方问题】                    # 第三方系统问题
-non_problem = 【非问题】                       # 非问题类工作
-system_config = 【系统配置问题】                # 系统配置相关问题
-system = 【系统问题】                          # 系统本身的问题
-bussiness_config = 【业务配置问题】             # 业务配置问题
-transfer_to_requirement = 【转需求】            # 需要转为需求的工作
-consultation  = 【业务咨询问题】                # 业务咨询类问题
-it_consulation  = 【IT数据查询】               # IT数据查询工作
-version_update = 【变更实施】                   # 版本变更实施
-gray_upgrade_deployment = 【灰度升级部署】       # 灰度升级部署
-alarm_monitoring_inspection = 【告警、监控、巡检】 # 告警监控巡检工作
-faq = 【案例输出】                            # 案例输出工作
-version_update_meeting = 【变更评审】           # 变更评审工作
-resource_management = 【资源管理】              # 资源管理工作
-compliant = 【合规类】                        # 合规类工作
-security_issue = 【安全事件】                  # 安全事件处理
+
+# 第三方系统问题
+third_party = 【第三方问题】
+# 非问题类工作
+non_problem = 【非问题】
+# 系统配置相关问题
+system_config = 【系统配置问题】
+# 系统本身的问题
+system = 【系统问题】
+# 业务配置问题
+bussiness_config = 【业务配置问题】
+# 需要转为需求的工作
+transfer_to_requirement = 【转需求】
+# 业务咨询类问题
+consultation  = 【业务咨询问题】
+# IT数据查询工作
+it_consulation  = 【IT数据查询】
+# 版本变更实施
+version_update = 【变更实施】
+# 灰度升级部署
+gray_upgrade_deployment = 【灰度升级部署】
+# 告警监控巡检工作
+alarm_monitoring_inspection = 【告警、监控、巡检】
+# 案例输出工作
+faq = 【案例输出】
+# 变更评审工作
+version_update_meeting = 【变更评审】
+# 资源管理工作
+resource_management = 【资源管理】
+# 合规类工作
+compliant = 【合规类】
+# 安全事件处理
+security_issue = 【安全事件】
 
 # 默认值配置 - 系统处理工作日志时使用的默认值
 # 默认工作时长(小时) - 当无法从日志中推断时长时使用
@@ -92,12 +109,19 @@ excel_prev_column_width = 35
 [issue-types]
 # 问题类型代码映射 - 用于将日志中的类型代码转换为可读的中文描述
 # 格式: 代码 = 中文描述
-SU = 供应商      # Supplier - 供应商相关问题
-CONS = 咨询类    # Consultation - 咨询类问题
-CONF = 配置类    # Configuration - 配置类问题
-BUG = BUG类      # Bug - 系统缺陷问题
-DATA = 数据类    # Data - 数据相关问题
-OP = 操作类      # Operation - 操作类问题
+
+# Supplier - 供应商相关问题
+SU = 供应商
+# Consultation - 咨询类问题
+CONS = 咨询类
+# Configuration - 配置类问题
+CONF = 配置类
+# Bug - 系统缺陷问题
+BUG = BUG类
+# Data - 数据相关问题
+DATA = 数据类
+# Operation - 操作类问题
+OP = 操作类
 
 # =============================================================================
 # 国家代码映射配置
@@ -107,20 +131,32 @@ OP = 操作类      # Operation - 操作类问题
 # 国家代码映射 - 用于将日志中的国家代码转换为中文国家名称
 # 格式: 代码 = 国家名称
 # 单国家代码
-BS = 新加坡      # Business Singapore - 新加坡
-SG = 新加坡      # Singapore - 新加坡
-RU = 俄罗斯      # Russia - 俄罗斯
-DE = 德国        # Germany - 德国
-ED = 德国        # Europe Germany - 德国
+# BS - Business Singapore
+BS = 新加坡
+# SG - Singapore
+SG = 新加坡
+# RU - Russia
+RU = 俄罗斯
+# DE - Germany
+DE = 德国
+# ED - Europe Germany
+ED = 德国
 
 # 多国家组合代码
-DR = 德国,俄罗斯  # Germany Russia - 德国和俄罗斯
-RD = 德国,俄罗斯  # Russia Germany - 俄罗斯和德国
-SR = 新加坡,俄罗斯 # Singapore Russia - 新加坡和俄罗斯
-RS = 俄罗斯,新加坡 # Russia Singapore - 俄罗斯和新加坡
-SD = 新加坡,德国  # Singapore Germany - 新加坡和德国
-DS = 德国,俄罗斯  # Germany Russia - 德国和俄罗斯
-SDR = 新加坡,德国,俄罗斯 # Singapore Germany Russia - 新加坡、德国和俄罗斯
+# DR - Germany Russia
+DR = 德国,俄罗斯
+# RD - Russia Germany
+RD = 德国,俄罗斯
+# SR - Singapore Russia
+SR = 新加坡,俄罗斯
+# RS - Russia Singapore
+RS = 俄罗斯,新加坡
+# SD - Singapore Germany
+SD = 新加坡,德国
+# DS - Germany Russia
+DS = 德国,俄罗斯
+# SDR - Singapore Germany Russia
+SDR = 新加坡,德国,俄罗斯
 
 # =============================================================================
 # 自动生成工作目录配置
